--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+$dark-red: #831010;
+$light-red: #db0000;
+$dark-grey: #222222;
+$black: #000000;
+$white: #ffffff;
