--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,19 +26,18 @@
       <header [ngClass]="{'main__header-dark': darkModeActive}" class="main__header">
   
           <div class="left__section">
-            <svg (click)="toggleMenu()" class="hamburger__icon" id="Menu_Burger_Icon">
-                <defs>
-                    <style>.hamburger__icon__fill {
-                        fill: #594e78
-                    }</style>
-                </defs>
-                <rect id="Rectangle_9" width="49.9" height="4" class="hamburger__icon__fill" data-name="Rectangle 9" rx="2"
-                      transform="translate(31.5 58)"/>
-                <rect id="Rectangle_10" width="49.9" height="4"  class="hamburger__icon__fill" data-name="Rectangle 10" rx="2"
-                      transform="translate(31.5 44)"/>
-                <rect id="Rectangle_11" width="49.9" height="4"  class="hamburger__icon__fill" data-name="Rectangle 11" rx="2"
-                      transform="translate(31.5 30)"/>  
-            </svg>
+              <svg (click)="toggleMenu()" class="hamburger__icon" id="Menu_Burger_Icon" data-name="Menu Burger Icon"
+           viewBox="31.5 30 49.9 32">
+        <rect id="Rectangle_9" width="49.9" height="4" [ngClass]="{'hamburger__icon__fill-dark': darkModeActive}"
+              class="hamburger__icon__fill" data-name="Rectangle 9" rx="2"
+              transform="translate(31.5 58)"/>
+        <rect id="Rectangle_10" width="49.9" height="4" [ngClass]="{'hamburger__icon__fill-dark': darkModeActive}"
+              class="hamburger__icon__fill" data-name="Rectangle 10" rx="2"
+              transform="translate(31.5 44)"/>
+        <rect id="Rectangle_11" width="49.9" height="4" [ngClass]="{'hamburger__icon__fill-dark': darkModeActive}"
+              class="hamburger__icon__fill" data-name="Rectangle 11" rx="2"
+              transform="translate(31.5 30)"/>
+      </svg>
   
               <svg class="logo__icon">
                 <!-- logo svg code goes here-->
