--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,7 @@
-
 <!-- Slide Menu-->
 <aside class="side-menu__container" [ngClass]="{'side-menu__container-active': showMenu}" (click)="toggleMenu()">
   <nav class="slide-menu" [ngClass]="{'slide-menu-active': showMenu}" (click)="$event.stopImmediatePropagation();">
       <section class="menu-header">
-          <span class="greeting__text">Welcome Back</span>
-          <div class="profile-image__container">
-              <img src="https://avatars3.githubusercontent.com/u/5658460?s=460&v=4" alt="profile-image"
-                   class="profile__image">
-          </div>
-          <div class="account-details">
-              <span class="name__text">Hamed Baatour</span>
-              <span class="email__text">hamedbaatour@gmail.com</span>
-          </div>
       </section>
       <section class="menu-body">
   
@@ -23,29 +13,25 @@
   </aside>
   
   <div class="root__container" >
-      <header [ngClass]="{'main__header-dark': darkModeActive}" class="main__header">
+      <header class="main__header">
   
           <div class="left__section">
               <svg (click)="toggleMenu()" class="hamburger__icon" id="Menu_Burger_Icon" data-name="Menu Burger Icon"
            viewBox="31.5 30 49.9 32">
-        <rect id="Rectangle_9" width="49.9" height="4" [ngClass]="{'hamburger__icon__fill-dark': darkModeActive}"
-              class="hamburger__icon__fill" data-name="Rectangle 9" rx="2"
-              transform="translate(31.5 58)"/>
-        <rect id="Rectangle_10" width="49.9" height="4" [ngClass]="{'hamburger__icon__fill-dark': darkModeActive}"
-              class="hamburger__icon__fill" data-name="Rectangle 10" rx="2"
-              transform="translate(31.5 44)"/>
-        <rect id="Rectangle_11" width="49.9" height="4" [ngClass]="{'hamburger__icon__fill-dark': darkModeActive}"
-              class="hamburger__icon__fill" data-name="Rectangle 11" rx="2"
-              transform="translate(31.5 30)"/>
-      </svg>
-  
-              <svg class="logo__icon">
-                <!-- logo svg code goes here-->
-              </svg>
+              <rect id="Rectangle_9" width="49.9" height="4"
+                    class="hamburger__icon__fill" data-name="Rectangle 9" rx="2"
+                    transform="translate(31.5 58)"/>
+              <rect id="Rectangle_10" width="49.9" height="4"
+                    class="hamburger__icon__fill" data-name="Rectangle 10" rx="2"
+                    transform="translate(31.5 44)"/>
+              <rect id="Rectangle_11" width="49.9" height="4"
+                    class="hamburger__icon__fill" data-name="Rectangle 11" rx="2"
+                    transform="translate(31.5 30)"/>
+            </svg>
   
           </div>
-  
-          <h3 class="date__text">Today</h3>
+          <img class="logo__icon " src="../assets/movieappsmalltext.png">
+          <!--<h3 class="header-text">movie <small>app</small></h3>-->
   
       </header>
   
