Update UI and routing module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,12 @@
       <section class="menu-header">
       </section>
       <section class="menu-body">
-  
+        <a routerLink="/" class="menu-button"><fa-icon class="menu-button-icon" icon="home"></fa-icon><span class="button-name">Home</span></a>
+        <a routerLink="/settings" class="menu-button"><fa-icon class="menu-button-icon" icon="cog"></fa-icon><span class="button-name">Settings</span></a>
+
       </section>
       <section class="menu-footer">
-  
+        
       </section>
   </nav>
   </aside>
