--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400');
 
 $dark-red: #831010;
 $light-red: #db0000;
-$dark-grey: #222222;
+$dark-grey: #141414;
 $black: #000000;
 $white: #ffffff;
+$regular: 'Noto Sans TC', sans-serif;
