--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,6 +12,11 @@
     background: $black;
     font-family: $regular;
   }
+
+  .main__container {
+      max-width:50%;
+      margin: auto;
+  }
   
   /*
   ================
