--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,8 +14,10 @@
   }
 
   .main__container {
-      max-width:50%;
-      margin: auto;
+    max-width: 60%;
+    margin: auto;
+    margin-top:-10rem;
+
   }
   
   /*
