--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 $dark-red: #831010;
 $light-red: #db0000;
 $dark-grey: #141414;
+$light-grey: #424242;
 $black: #000000;
 $white: #ffffff;
 $regular: 'Noto Sans TC', sans-serif;
