--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,14 +2,15 @@
 <section class="login">
     <img id="logo-login" src="../../assets/movieappsmalltext.png">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <h2 class="login-welcome">Welcome</h2>
         <div class="form-group">
-            <input type="text" placeholder="email" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+            <input type="text" placeholder="Email" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
             <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                 <div *ngIf="f.username.errors.required">Email is required</div>
             </div>
         </div>
         <div class="form-group">
-            <input type="password" placeholder="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+            <input type="password" placeholder="Password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
             <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                 <div *ngIf="f.password.errors.required">Password is required</div>
             </div>
