Update login UI

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,4 +21,6 @@
             <!-- REGISTER <a routerLink="/register" class="btn btn-link">Register</a>-->
         </div>
     </form>
+    <img id="logo-login" src="../../assets/movieapptransparent.png">
+    <p style="color:white; font-size:0.8rem;">Movie App was crafted by Leevi Kopakkala and Aku Lehtonen</p>
 </section>
