--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -8,7 +8,7 @@
     z-index:5;
     margin:0 auto;
     height:100%;
-    width:80%;
+    width:50%;
     max-width: 80%;
     left:-2rem;
     align-content: center;
@@ -18,22 +18,29 @@
     padding:2rem;
     padding-left:0;
     padding-right:0;
-    border-bottom: 3rem solid $light-red;
+    padding-top:15rem;
+    border-radius:0.5rem;
+    border-bottom: 1rem solid $light-red;
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.247);
     opacity:0.9;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 900px) {
     .login {
         max-width:100% !important;
         width:100%;
         padding:2rem;
         left:-2rem;
         border-left:0;
-        border-bottom:2rem solid $light-red;
+        border-bottom:1rem solid $light-red;
+        margin-top:2rem;
     }
     input {
         width:100%;
+    }
+
+    #logo-login {
+        margin-top:0.1rem;
     }
 }
 
@@ -60,6 +67,7 @@
     width:30%;
     margin-left:-1rem;
     opacity:1;
+    margin-top:3rem;
 }
 
 input {
@@ -79,6 +87,9 @@ button {
     padding:0.8rem;
     background: $light-red;
     border:0;
+    margin-left:-1.3rem;
+    cursor:pointer;
+    border-radius:0.1rem;
     color: $white;
     width:5rem;
     width:5rem;
