--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400');
 
 $dark-red: #831010;
 $light-red: #db0000;
@@ -7,4 +8,5 @@ $dark-grey: #141414;
 $light-grey: #424242;
 $black: #000000;
 $white: #ffffff;
-$regular: 'Noto Sans TC', sans-serif;
+//$regular: 'Noto Sans TC', sans-serif;
+$regular: 'Source Sans Pro', sans-serif;
