Overall update + add new features

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
   
       <!--<router-outlet></router-outlet>-->
       <main class="main__container">
-          <div class="main-container__bg"></div>
+          <!--<div class="main-container__bg"></div>-->
           <router-outlet></router-outlet>
       </main>
   
