--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,9 @@
-<p style="color:white;">
-  This is Authenticated Page
-</p>
+<div class="page">
+    <section id="popular-movies">
+        <h1 class="popular-header">Popular movies</h1>
+        <app-popular></app-popular>
+    </section>
+</div>
+
+
+
