--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,13 @@
     <section id="popular-movies">
         <h1 class="popular-header">Popular movies</h1>
         <app-popular></app-popular>
+        
     </section>
+    <section id="popular-movies">
+            <h1 class="popular-header">Popular movies</h1>
+            <app-popular></app-popular>
+            
+        </section>
 </div>
 
 
