--- a/src/app/popular/popular.component.scss
+++ b/src/app/popular/popular.component.scss
@@ -22,7 +22,7 @@
   overflow-x: auto;
     .card {
         flex: 0 0 auto;
-        padding-right:10rem;
-        padding-left: 10rem;
+        margin:1rem;
+        box-shadow: 0 5px 10px 0 rgba(105, 105, 105, 0.247);
     }
   }
