--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,7 @@
     width: 100vw;
     height: 100vh;
     display: grid;
+    overflow-x:hidden;
     grid-template-columns: auto;
     grid-template-rows: 0.5fr auto;
     position: relative;
@@ -14,7 +15,7 @@
   }
 
   .main__container {
-    max-width: 60%;
+    max-width: 90%;
     margin: auto;
     margin-top:-10rem;
   }
