Update mobile UI

--- a/src/app/popular/popular.component.scss
+++ b/src/app/popular/popular.component.scss
@@ -23,6 +23,10 @@
     .card {
         flex: 0 0 auto;
         margin:1rem;
+       
         box-shadow: 0 5px 10px 0 rgba(105, 105, 105, 0.247);
+    }
+    img {
+        max-height:50vh;
     }
   }
