Add dyamic routes for movies

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
             </svg>
   
           </div>
-          <img class="logo__icon " src="../assets/movieappsmalltext.png">
+          <a routerLink="/"><img class="logo__icon " src="../assets/movieappsmalltext.png"></a>
       </header>
   
       <!-- Main Content -->
