--- a/src/app/popular/popular.component.scss
+++ b/src/app/popular/popular.component.scss
@@ -3,6 +3,7 @@
 .popular-header {
     color:$light-red;
     font-weight:100;
+    font-size:1rem;
     text-align:left;
     background-color:#FFF;
     width:100%;
@@ -17,7 +18,7 @@
 
 .scrolling-wrapper {
     display: flex;
-    max-width:100vw;
+    max-width:95vw;
   flex-wrap: nowrap;
   overflow-x: auto;
     .card {
@@ -27,6 +28,6 @@
         box-shadow: 0 5px 10px 0 rgba(105, 105, 105, 0.247);
     }
     img {
-        max-height:50vh;
+        max-height:40vh;
     }
   }
