--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,10 @@
 
       </section>
       <section class="menu-footer">
-        
+            <a (click)="logout()" class="menu-button logout-button"><span class="button-name">Logout</span></a>
       </section>
   </nav>
-  </aside>
+</aside>
   
   <div class="root__container" >
       <header class="main__header">
