--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,10 @@
 <div class="page">
+        
+    <section id="home-header">
+        <img src="../../assets/movieapptransparent.png">
         <iframe src="https://www.youtube.com/embed/rQb_YTLXvco" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+    
     <section id="popular-movies">
         <h1 class="popular-header">Popular movies</h1>
         <app-popular></app-popular>
