--- a/src/app/popular/popular.component.scss
+++ b/src/app/popular/popular.component.scss
@@ -17,14 +17,15 @@
 
 
 .scrolling-wrapper {
+    background:$dark-grey;
+    box-shadow: 5px 0px 100px 100px rgba(36, 36, 36, 0.247);
     display: flex;
     max-width:95vw;
   flex-wrap: nowrap;
   overflow-x: auto;
     .card {
         flex: 0 0 auto;
-        margin:1rem;
-       
+        margin:1rem;  
         box-shadow: 0 5px 10px 0 rgba(105, 105, 105, 0.247);
     }
     img {
