--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -5,7 +5,7 @@
     align-content:center;
     text-align:center;
     position:relative;
-    z-index:5;
+    z-index:102;
     margin:0 auto;
     height:100%;
     width:40%;
@@ -47,10 +47,14 @@
 
 #background-image{
     position:fixed;
-    z-index:2;
+    z-index:101;
     left: 0;
     top: 0;
     height: 100%;
+    min-width: 100%; 
+    min-height: 100%;
+    width: auto; 
+    height: auto;
     background-size: cover;
     background-size: 1920px auto;
 }
