--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400');
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400');
+@import url('https://fonts.googleapis.com/css?family=Niramit:300,400');
+@import url('https://fonts.googleapis.com/css?family=PT+Sans');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans');
 
 $dark-red: #831010;
 $light-red: #db0000;
@@ -8,5 +11,5 @@ $dark-grey: #141414;
 $light-grey: #424242;
 $black: #000000;
 $white: #ffffff;
-//$regular: 'Noto Sans TC', sans-serif;
-$regular: 'Source Sans Pro', sans-serif;
+//$regular: 'Noto Sans TC', sans-serif; 
+$regular: 'Niramit Sans', sans-serif;
