--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,13 +7,13 @@
         <img src="../../assets/movieapptransparent.png">
     <section id="home-header">
         
-        <h1 class="home-header home-header-big">See, create, watch</h1>
+        <h1 class="home-header home-header-big">See, create, watch<br><small class="home-header-hashtag">#movieapp</small></h1>
         <!--<video id="background-image" autoplay muted loop>
             <source src="../../assets/login.mp4" type="video/mp4">
                     <source src="../../assets/login.ogv" type="video/ogg"/>   
                     <source src="../../assets/login.webm" type="video/webm"/>
         </video>-->
-        <!--<p class="home-header home-header-small"><span style="color:rgb(221, 0, 0)">Create</span> your own playlist</p>-->
+        <p class="home-header home-header-small"><span style="color:rgb(138, 0, 0)">Create</span> your own playlist</p>
         <!--
         <iframe src="https://www.youtube.com/embed/rQb_YTLXvco" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
     </section>
