Add ngif statements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,15 @@
       </section>
       <section class="menu-body">
         <a routerLink="/" class="menu-button"><fa-icon class="menu-button-icon" icon="home"></fa-icon><span class="button-name">Home</span></a>
-        <a routerLink="/settings" class="menu-button"><fa-icon class="menu-button-icon" icon="cog"></fa-icon><span class="button-name">Settings</span></a>
-
+        <a *ngIf="logged==true" routerLink="/settings" class="menu-button"><fa-icon class="menu-button-icon" icon="cog"></fa-icon><span class="button-name">Settings</span></a>
       </section>
-      <section class="menu-footer">
+      <section  *ngIf="logged==true" class="menu-footer">
             <a (click)="logout()" class="menu-button logout-button"><span class="button-name">Logout</span></a>
       </section>
   </nav>
 </aside>
   
-  <div class="root__container" >
+  <div class="root__container"  >
     
       <header class="main__header">
   
