--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<video id="background-image"  playsinline autoplay muted loop>
+<video data-ng-init="this.play();" id="background-image"  playsinline autoplay muted loop>
         <source src="../../assets/login.mp4" type="video/mp4">
         <source src="../../assets/login.ogv" type="video/ogg"/>   
         <source src="../../assets/login.webm" type="video/webm"/> 
