--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -92,10 +92,16 @@ button {
     padding:0.8rem;
     background: $light-red;
     border:0;
+    margin-top:1rem;
     margin-left:-1.3rem;
     cursor:pointer;
     border-radius:0.1rem;
     color: $white;
     width:5rem;
     width:5rem;
+}
+
+.invalid-feedback {
+    color:$light-red;
+    text-align:center;
 }
