--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
-<video data-ng-init="this.play();" id="background-image"  playsinline autoplay muted loop>
+<video ng-init="this.play()"  id="background-image" #videoPlayer autoplay playsinline muted loop>
         <source src="../../assets/login.mp4" type="video/mp4">
         <source src="../../assets/login.ogv" type="video/ogg"/>   
         <source src="../../assets/login.webm" type="video/webm"/> 
 </video>
-<section class="login">
+<section data-ng-init="toggleVideo();" class="login">
     <img id="logo-login" src="../../assets/movieappsmalltext.png">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <h2 class="login-welcome">Welcome</h2>
