Create register + General update

--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -1,5 +1,1 @@
-
-    <section id="movie-details">
-        <img src="{{movieDetails.Poster}}">
-        <p style="color:white">{{movieDetails.Title}}</p>
-    </section>
+<p>{{movieDetails['Title']}}</p>
