--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -101,6 +101,12 @@ button {
     width:5rem;
 }
 
+.register-button {
+    margin-left:-1.3rem;
+    color:$white;
+    cursor:pointer; 
+}
+
 .invalid-feedback {
     color:$light-red;
     text-align:center;
