--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,15 +18,14 @@
         <iframe src="https://www.youtube.com/embed/rQb_YTLXvco" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
     </section>
     <section id="popular-movies">
-        <h1 class="popular-header">Popular movies</h1>
-        <app-popular></app-popular>
+        <h1 class="popular-header">Your playlist</h1>
+        <app-playlist></app-playlist>
         
     </section>
     <section id="popular-movies">
             <h1 class="popular-header">Popular movies</h1>
-            <app-popular></app-popular>
-            
-        </section>
+            <app-popular></app-popular>           
+    </section>
 </div>
 
 
