--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,13 +18,24 @@
         <iframe src="https://www.youtube.com/embed/rQb_YTLXvco" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
     </section>
     <section id="popular-movies">
-        <h1 class="popular-header">Your playlist</h1>
-        <app-playlist></app-playlist>
-        
+        <h1 class="popular-header">Marvel</h1>
+        <app-suggested title='Marvel'></app-suggested>           
     </section>
     <section id="popular-movies">
-            <h1 class="popular-header">Popular movies</h1>
-            <app-popular></app-popular>           
+        <h1 class="popular-header">Live long and prosper</h1>
+        <app-suggested title='Star Trek'></app-suggested>           
+    </section>
+    <section id="popular-movies">
+        <h1 class="popular-header">I am your father</h1>
+        <app-suggested title='Star Wars'></app-suggested>           
+    </section>
+    <section id="popular-movies">
+        <h1 class="popular-header">{{userDetails['name']}}'s playlist, shaken... not stirred.</h1>
+        <app-playlist></app-playlist>     
+    </section>
+    <section id="popular-movies">
+        <h1 class="popular-header">Popular movies</h1>
+        <app-popular></app-popular>           
     </section>
 </div>
 
