--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,6 +18,9 @@
         <iframe src="https://www.youtube.com/embed/rQb_YTLXvco" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
     </section>
     <section id="popular-movies">
+            <h1 class="popular-header name-header">Welcome,{{ userDetails['name']}}</h1>       
+    </section>
+    <section id="popular-movies">
         <h1 class="popular-header">Marvel</h1>
         <app-suggested title='Marvel'></app-suggested>           
     </section>
