--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,8 +17,8 @@
         <!--
         <iframe src="https://www.youtube.com/embed/rQb_YTLXvco" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
     </section>
-    <section id="popular-movies">
-            <h1 class="popular-header name-header">Welcome,{{ userDetails['name']}}</h1>       
+    <section id="popular-movies name-header-popular">
+            <h1 class="popular-header name-header">Welcome,<span style="color:rgb(219, 0, 0)">{{ userDetails['name']}}</span></h1>       
     </section>
     <section id="popular-movies">
         <h1 class="popular-header">Marvel</h1>
