--- a/src/app/movie-details/movie-details.component.scss
+++ b/src/app/movie-details/movie-details.component.scss
@@ -1,5 +1,87 @@
+@import "../../styles.scss";
+
+
 #movie-details {
-    margin-left: 0rem !important;
+    top:10rem;
+    margin-left: 20vw;
+    margin: 0 auto;
     max-width:100vw;
-    max-height:40vh;
+    width:90vw;
+    color:$white;
+    text-align:left;
+    align-content: center;
+    //border: $dark-grey 1px solid;
+    //background: #080808;
+    border-left:10px $dark-red solid;
+    //border-radius:10px;
+    padding:2rem;
+    padding-right:0;
+    //box-shadow: 0 5px 10px 0 rgba(46, 46, 46, 0.247);
+}
+
+img {
+    margin-top:10rem;
+    width:15vw;
+    opacity:0.8;
+}
+
+
+.ticket-header {
+
+}
+
+.movie-element {
+    top:20rem;
+    width:50%;
+    z-index:10;
+}
+
+.movie-element-special {
+    width:50%;
+    right:0;
+    top:10rem;
+    position:absolute;
+    z-index:1;
+}
+
+.movie-info {
+    color: $light-grey;
+    display: inline-block;
+    margin-left:1rem;
+}
+
+
+@media only screen and (max-width: 900px) {
+    img {
+        float:none;
+        position: static;
+        width:60vw !important;
+        padding:0;
+    }
+    .movie-element {
+        top:20rem;
+        width:80%;
+        margin:0 !important ;
+    }
+
+    #movie-details {
+        border:0;
+    }
+}
+
+.IMDB-SCORE {
+    background:$dark-grey;
+    border-left: $light-grey 2px solid;
+    padding:1rem;
+    border-radius: 2px;
+    color:yellow;
+    font-size:1rem;
+}
+
+.movie-desc{
+    color:#a5a5a5;
+}
+
+#imdb-logo {
+    width:2vw;
 }
