--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,8 +17,23 @@
         <!--
         <iframe src="https://www.youtube.com/embed/rQb_YTLXvco" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
     </section>
+    
     <section id="popular-movies name-header-popular">
-            <h1 class="popular-header name-header">Welcome,<span style="color:rgb(219, 0, 0)">{{ userDetails['name']}}</span></h1>       
+            <h1 class="popular-header name-header"><fa-icon class="menu-button-icon" icon="home"></fa-icon> Welcome,<span style="color:rgb(219, 0, 0)">{{ userDetails['name']}}</span></h1>       
+    </section>
+    <section id="popular-movies">
+        <app-playlist></app-playlist>     
+    </section>
+    <section id="popular-movies">
+        <h1 class="popular-header">Community favourites</h1>
+        <app-popular></app-popular>           
+    </section>
+    <section id="popular-movies">
+        <h1 class="popular-header" style="font-size:1rem">Search:</h1>
+        <form [formGroup]="searchForm" (ngSubmit)="onSearch()"></form>
+            <input formControlName="search" type="text" placeholder="Search for a title" class="form-control search-title"/>   
+            <button [disabled]="loading" class="btn btn-primary">Login</button>
+        </form>
     </section>
     <section id="popular-movies">
         <h1 class="popular-header">Marvel</h1>
@@ -33,13 +48,9 @@
         <app-suggested title='Star Wars'></app-suggested>           
     </section>
     <section id="popular-movies">
-        <h1 class="popular-header">{{userDetails['name']}}'s playlist, shaken... not stirred.</h1>
-        <app-playlist></app-playlist>     
-    </section>
-    <section id="popular-movies">
-        <h1 class="popular-header">Popular movies</h1>
-        <app-popular></app-popular>           
-    </section>
+            <h1 class="popular-header">Be A Superhero</h1>
+            <app-suggested title='Avengers'></app-suggested>           
+        </section>
 </div>
 
 
