--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,9 +30,9 @@
     </section>
     <section id="popular-movies">
         <h1 class="popular-header" style="font-size:1rem">Search:</h1>
-        <form [formGroup]="searchForm" (ngSubmit)="onSearch()"></form>
+        <form [formGroup]="searchForm" (ngSubmit)="onSearch()">
             <input formControlName="search" type="text" placeholder="Search for a title" class="form-control search-title"/>   
-            <button [disabled]="loading" class="btn btn-primary">Login</button>
+            <button [disabled]="loading" class="btn btn-primary">Search</button>
         </form>
     </section>
     <section id="popular-movies">
