--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,12 @@
 <div id="page">
+  <section id="popular-movies">
+      <form [formGroup]="searchForm" (ngSubmit)="onSearch()">
+          <input formControlName="search" type="text" placeholder="Search for a title" class="form-control search-title"/>   
+          <button [disabled]="loading" class="btn btn-primary">Search</button>
+      </form>
+  </section>
     <section id="popular-movies">
-        <h1 class="popular-header">Search results</h1>
+        <h1 class="popular-header" style="color:white;">Search results</h1>
         <app-suggested title='{{keyword}}'></app-suggested>           
     </section>
 </div>
