--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,7 +2,7 @@
   <section id="popular-movies">
       <form [formGroup]="searchForm" (ngSubmit)="onSearch()">
           <input formControlName="search" type="text" placeholder="Search for a title" class="form-control search-title"/>   
-          <button [disabled]="loading" class="btn btn-primary">Search</button>
+          <button class="btn btn-primary">Search</button>
       </form>
   </section>
     <section id="popular-movies">
