--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,7 @@
         <h1 class="popular-header" style="font-size:1rem">Search:</h1>
         <form [formGroup]="searchForm" (ngSubmit)="onSearch()">
             <input formControlName="search" type="text" placeholder="Search for a title" class="form-control search-title"/>   
-            <button [disabled]="loading" class="btn btn-primary">Search</button>
+            <button class="btn btn-primary">Search</button>
         </form>
     </section>
     <section id="popular-movies">
